--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ serde = "1.0.119"
 serde_json = "1.0.61"
 serde_derive = "1.0.119"
 tokio = { version = "1.0.2", features = ["full"] }
+dirs-next = "2.0.0"
+confy = "0.4.0"
